force-app/main/default/objects/Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>http endpoint that was called for this transaction log</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>