force-app/main/default/objects/Log__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <description>Stores apex exception information</description>
    <label>Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>