force-app/main/default/objects/Log__c/fields/Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Name__c</fullName>
    <description>Friendly name for this log record. Typically used to categorize by log type.</description>
    <label>Log Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>