force-app/main/default/objects/Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Typically used to store a http response, or secondary log information after the log body</description>
    <label>Response</label>
    <length>131027</length>
    <type>LongTextArea</type>
</CustomField>