force-app/main/default/objects/Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Result of the transaction - sometimes the HTTP status information</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>